--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,72 @@
+# ========================
+# OS
+# ========================
 .DS_Store
-.ipynb_checkpoints/
-doody_key
-doody_key.pub
+Thumbs.db
+
+# ========================
+# Python
+# ========================
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+.eggs/
+.Python
+env/
+venv/
+ENV/
+.venv/
+venv.bak/
+*.sqlite3
+
+# ========================
+# Jupyter Notebooks
+# ========================
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+.profile
+*.nbconvert.ipynb
+
+# ========================
+# Virtualenv / Environments
+# ========================
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# ========================
+# Logs / Debug
+# ========================
+*.log
+*.out
+*.err
+*.pid
+
+# ========================
+# Sensitive files
+# ========================
 *.pem
 *.key
 *.pub
-*.env
+*.crt
+*.csr
 *.secret
 *.credentials
-.DS_Store
-.ipynb_checkpoints/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.sqlite3
+
+# ========================
+# IDEs / Editors
+# ========================
+.vscode/
+.idea/
+*.swp
+*.swo
+*.bak
